Project "Ficus Data Base" {
  database_type: 'SQL Server'
  Note: 'Base de datos para la pyme Ficus'
}

Table Usuario {
  ID_Usuario integer [pk]
  Nombre varchar
  Contrasena varchar
  Rol integer [ref: - Rol.ID_Rol]
}

Table Rol {
  ID_Rol integer [pk]
  Tipo_rol varchar
}

// Table Roles_usuario {
//   Usuario integer [ref: > Usuario.ID_Usuario]
//   Rol integer [ref: - Rol.ID_Rol]
// }

Table Producto {
  SKU varchar [pk]
  Nombre varchar
  Descripcion varchar
  Dimensiones varchar
  Peso_recipiente integer
  Peso_desechable integer
  Alquiler_Comercios integer
  Alquiler_Retail integer
}

Table Categoria {
  ID_Categoria integer [pk]
  Nombre_categoria varchar
  Producto integer [ref: - Producto.SKU]
}

// Table Categoria_producto {
//   Producto integer [ref: - Producto.SKU]
//   Categoria integer [ref: - Categoria.ID_Categoria]
// }

Table Familia {
  ID_Familia integer [pk]
  Nombre_familia varchar
  Producto integer [ref: - Producto.SKU]
}

// Table Familia_producto {
//   Producto integer [ref: - Producto.SKU]
//   Familia integer [ref: - Familia.ID_Familia]
// }

Table Color {
  ID_Color varchar [pk]
  Descripcion varchar
  Producto integer [ref: > Producto.SKU]
}

// Table Color_producto{
//   Producto integer [ref: - Producto.SKU]
//   Color varchar [ref: - Color.ID_Color]
// }

Table Estado_producto {
  ID_EstadoProducto integer [pk]
  Descripcion_estadoproducto varchar
}

Table Inventario {
  ID_Inventario integer [pk]
  ProductoSKU varchar [ref: - Producto.SKU]
  Estado integer [ref: > Estado_producto.ID_EstadoProducto]
  Cantidad integer
  Lote integer
  Fecha_ingreso timestamp
}


Table Orden {
  ID_Orden varchar [pk]
  Fecha_alquiler timestamp
  Usuario varchar [ref: - Usuario.ID_Usuario, not null, note: "Responsable de agregar la orden"]
  // Estado varchar
  // Evento bit
  Cliente varchar [ref: > Cliente.ID_Cliente]
  Registro_limpieza integer
  Limpieza_unidad integer
  Limpieza integer
  Monto integer
  Descuento integer
}

Table Estado_Orden {
  ID_estado integer [pk]
  Descripcion_estado varchar
  Orden varchar [ref: - Orden.ID_Orden]
}

Table Evento {
  ID_Evento integer [pk]
  Nombre_evento varchar
  Descripcion_evento varchar
  Ordenes integer [ref: < Orden.ID_Orden]
}

Table Detalle {
  ID_reserva integer [pk, ref: > Orden.ID_Orden]
  ProductoSKU varchar [ref: > Producto.SKU]
  Pedidos integer
  Sin_usar integer
  Usados integer
  Devueltos integer
  Descuento integer
}


Table Cliente {
  ID_Cliente integer [pk]
  Tipo varchar
  Fecha_agregado timestamp
  Segmento varchar
  Responsable varchar [ref: - Usuario.Nombre]
  Prioridad varchar
  Estado varchar
  Medio_de_comunicacion varchar
  Nombre varchar
  Telefono integer
  Correo varchar
  Web varchar
}
